--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,5 +8,5 @@
 </div>
 
 <div class="contentindex">
-    <h4> This is the Home page with little content but this page is just the beggining click of "brief" on the menu bar to proceed</h4>
+    <h4> This is the Home page with little content but this page is just the beggining click on "brief" on the menu bar to proceed</h4>
      </div>
