--- a/Views/Home/brief.cshtml
+++ b/Views/Home/brief.cshtml
@@ -15,45 +15,49 @@
       <br>
 
        <h2>Group members</h2>
-        <h3>Full Stack Dev: Weston Smith</h3>
-        <h3>Full Stack Dev: Nicolas Millen</h3>
+    <h3>Full Stack Dev: Weston Smith</h3>
+    <h3>Full Stack Dev: Nicolas Millan</h3>
 
 </header>
 
 <br>
-<section>
+<section id="sectionOne">
 
-<h2>Proposal</h2>
-<p>
-    This company is very humble all it wants is your social insurence
-             information and the site will prompt you various times to put
-              in senstitive 
-               information about yourself.
-</p>
 
-<h2>Products</h2>
-<li>1. A questionaire that will ask you many different questions that will 
-    leave you peniless
-</li>
+<div>
+    <h2>Proposal</h2>
+    <p>
+        This company is very humble all it wants is your social insurence
+                information and the site will prompt you various times to put
+                in senstitive 
+                information about yourself.
+    </p>
 
-<li>
-    2. we have a dedicated service that will track all the data you have so  
-    you never leave anything out
-</li>
+    <h2>Products</h2>
+    <li>1. A questionaire that will ask you many different questions that will 
+        leave you peniless
+    </li>
 
-<li>
-    3. this is a pair of glasses with little cameras in it to rewatch your favorite
-    parts of life
-</li>
+    <li>
+        2. we have a dedicated service that will track all the data you have so  
+        you never leave anything out
+    </li>
 
-   <br>   
-   <br>
-   
-   <h2>Industry Needs</h2>   
-<p>The role this company is fufilling will be security because in today's day and world it is very obvious that none of us
-    are safe from the deep depths of the world wide web
-</p>
-<br>
+    <li>
+        3. this is a pair of glasses with little cameras in it to rewatch your favorite
+        parts of life
+    </li>
+
+    <br>   
+    <br>
+    
+    <h2>Industry Needs</h2>   
+    <p>The role this company is fufilling will be security because in today's day and world it is very obvious that none of us
+        are safe from the deep depths of the world wide web
+    </p>
+    <br>    
+</div>
+<img src="./img/SecureImg.jpg" class="Img1" alt="Security" asp-append-version="true">
 
 </section>
 
