--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,20 +20,24 @@ html {
 body {
   margin-bottom: 60px;
 }
-/* ============================Title==================================*/
-h1{
-color: rgb(92, 64, 64);
-font-family: 'Comfortaa', cursive;
-text-align: center;
-}
-.title2{
-  color: rgb(24, 16, 16);
-font-family: 'Comfortaa', cursive;
-font-size: 2em;
-font-weight: 800;
-text-align: center;
-}
 /* ==========================Header==================================*/
+header{
+  margin-bottom: 5%;
+}
+.navbar-brand img{
+    width: 100px;
+    height: 100px;
+}
+.navbar-nav .nav-item:hover{
+  background-color: rgb(190, 107, 107);;
+}
+.searchBar .material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
 h2{
   font-family: 'Comfortaa', cursive;
   color: rgb(190, 107, 107);
@@ -43,6 +47,20 @@ h3{
   font-family: 'Roboto Condensed', sans-serif;
   color: rgb(70, 21, 21);
   font-size: 1em;
+}
+
+/* ============================Title==================================*/
+h1{
+  color: rgb(92, 64, 64);
+  font-family: 'Comfortaa', cursive;
+  text-align: center;
+ }
+.title2{
+  color: rgb(24, 16, 16);
+  font-family: 'Comfortaa', cursive;
+  font-size: 2em;
+  font-weight: 800;
+  text-align: center;
 }
 /* ==========================Body===================================*/
 body{
@@ -56,13 +74,39 @@ li{
   font-size: 1em;
 }
 
-
-/*brand colours brown black and red*/
+#sectionOne{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    margin-left: 25%;
+}
+#sectionOne div{
+    background-color: rgba(59, 40, 40, 0.356);
+}
+#sectionOne div li{
+    padding: 2%;
+    list-style-type: none;
+}
+#section img{
+    grid-row: 2/2;
+    columns: 2/2;
+}
+.Img1{
+    width: 80%;
+    height: 100%;
+    position: sticky;
+}
 /* ==========================Footer====================================*/
-footer{font-family: 'Roboto Condensed', sans-serif;
+footer{
+  font-family: 'Roboto Condensed', sans-serif;
   color: rgb(70, 21, 21);
   font-size: 1em;
-    }
+  margin-top: 5%;
+  text-align: left;
+}
+footer p {
+  width: 40%;
+}
   
 /*====================Index=================*/
 .display-4{
